Fix page index on smaller screens

--- a/src/_includes/css/compositions/horizontal.css
+++ b/src/_includes/css/compositions/horizontal.css
@@ -17,6 +17,10 @@
     display: block;
   }
 
+  .horizontal[data-responsive] > * {
+    margin-bottom: var(--space-tiny);
+  }
+
   .horizontal[data-responsive] hr {
     opacity: 0;
   }
